--- a/ead/forum.html
+++ b/ead/forum.html
@@ -90,10 +90,6 @@
                                     <a title="Courses Profile" href="course-info.html">
                                     <span class="mini-sub-pro">Meus Cursos</span></a>
                                 </li>
-                                <li>
-                                    <a title="Courses Profile" href="course-info.html">
-                                    <span class="mini-sub-pro">Proximos Cursos</span></a>
-                                </li>
                             </ul>
                         </li>                        
                         <li>
@@ -314,40 +310,40 @@
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                             <div class="mobile-menu">
                                 <nav id="dropdown">
-                                    <ul class="metismenu" id="menu1">
-                                        <li class="active">
-                                            <a class="" href="index.html">
-                                               <span class="educate-icon educate-home icon-wrap"></span>
-                                               <span class="mini-click-non">Atividade</span>
-                                            </a>
-                                        </li>                        
-                                        <li>
-                                            <a class="has-arrow" href="all-courses.html" aria-expanded="false"><span class="educate-icon educate-course icon-wrap"></span> <span class="mini-click-non">Cursos</span></a>
-                                            <ul class="submenu-angle" aria-expanded="false">
-                                                <li><a title="All Courses" href="all-courses.html"><span class="mini-sub-pro">Todos Cursos</span></a></li>
-                                                <li><a title="Courses Profile" href="course-info.html"><span class="mini-sub-pro">Meus Cursos</span></a></li>
-                                                <li><a title="Courses Profile" href="course-info.html"><span class="mini-sub-pro">Proximos Cursos</span></a></li>
-                                            </ul>
-                                        </li>                        
-                                        <li>
-                                            <a title="Landing Page" href="events.html" aria-expanded="false"><span class="educate-icon educate-event icon-wrap sub-icon-mg" aria-hidden="true"></span> <span class="mini-click-non">Fórum</span></a>
-                                        </li>
-                                        <li>
-                                            <a title="Landing Page" href="events.html" aria-expanded="false"><span class="educate-icon educate-event icon-wrap sub-icon-mg" aria-hidden="true"></span> <span class="mini-click-non">Livros</span></a>
-                                        </li>
-                                        <li class="">
-                                            <a class="has-arrow" aria-expanded="false"><span class="educate-icon educate-student icon-wrap"></span> <span class="mini-click-non">Perfil</span></a>
-                                            <ul class="submenu-angle" aria-expanded="false">
-                                               <li><a href="#"><span class="edu-icon edu-user-rounded author-log-ic"></span>Meu Perfil</a>
-                                                </li>
-                                                <li><a href="login.html"><span class="edu-icon edu-locked author-log-ic"></span>Sair</a>
-                                                </li>
-                                            </ul>
-                                        </li>
-                                        <li>
-                                            <a title="Landing Page" href="../index.html" aria-expanded="false"><i class="fa fa-sign-out" aria-hidden="true"></i> <span class="mini-click-non">Crypto Money</span></a>
-                                        </li>                        
-                                    </ul>
+                                                        <ul class="metismenu" id="menu1">
+                        <li class="active">
+                        <li>
+                            <a class="" href="index.html">
+                               <span class="educate-icon educate-home icon-wrap"></span>
+                               <span class="mini-click-non">Atividade</span>
+                            </a>
+                        </li>                        
+                        <li>
+                            <a class="has-arrow" href="all-courses.html" aria-expanded="false"><span class="educate-icon educate-course icon-wrap"></span> <span class="mini-click-non">Cursos</span></a>
+                            <ul class="submenu-angle" aria-expanded="false">
+                                <li><a title="All Courses" href="all-courses.html"><span class="mini-sub-pro">Todos Cursos</span></a></li>
+                                <li><a title="Courses Profile" href="course-info.html"><span class="mini-sub-pro">Meus Cursos</span></a></li>
+                            </ul>
+                        </li>                        
+                        <li>
+                            <a title="Landing Page" href="events.html" aria-expanded="false"><span class="educate-icon educate-event icon-wrap sub-icon-mg" aria-hidden="true"></span> <span class="mini-click-non">Fórum</span></a>
+                        </li>
+                        <li>
+                            <a title="Landing Page" href="events.html" aria-expanded="false"><span class="educate-icon educate-event icon-wrap sub-icon-mg" aria-hidden="true"></span> <span class="mini-click-non">Livros</span></a>
+                        </li>
+                        <li class="">
+                            <a class="has-arrow" href="all-students.html" aria-expanded="false"><span class="educate-icon educate-student icon-wrap"></span> <span class="mini-click-non">Perfil</span></a>
+                            <ul class="submenu-angle" aria-expanded="false">
+                                <li><a href="#"><span class="edu-icon edu-user-rounded author-log-ic"></span>Meu Perfil</a>
+                                </li>
+                                <li><a href="#"><span class="edu-icon edu-locked author-log-ic"></span>Sair</a>
+                                </li>
+                            </ul>
+                        </li>
+                        <li>
+                            <a title="Landing Page" href="../index.html" aria-expanded="false"><i class="fa fa-sign-out" aria-hidden="true"></i> <span class="mini-click-non">Crypto Money</span></a>
+                        </li>                        
+                    </ul>
                                 </nav>
                             </div>
                         </div>
