--- a/ead/todos-cursos.html
+++ b/ead/todos-cursos.html
@@ -293,16 +293,12 @@
                                                 </li>
                                                 <li class="nav-item">
                                                     <a href="#" data-toggle="dropdown" role="button" aria-expanded="false" class="nav-link dropdown-toggle">
-															<img src="assets/img/product/pro4.jpg" alt="" /> <span class="admin-name">Gabriela Gonçalves</span><i class="fa fa-angle-down edu-icon edu-down-arrow"></i>
-														</a>
+                                                            <img src="assets/img/product/pro4.jpg" alt="" /> <span class="admin-name">Gabriela Gonçalves</span><i class="fa fa-angle-down edu-icon edu-down-arrow"></i>
+                                                        </a>
                                                     <ul role="menu" class="dropdown-header-top author-log dropdown-menu animated zoomIn">
-                                                        <li><a href="#"><span class="edu-icon edu-home-admin author-log-ic"></span>Minha Conta</a>
+                                                        <li><a href="#"><i class="fa fa-user-circle-o" aria-hidden="true"></i> Meu Perfil</a>
                                                         </li>
-                                                        <li><a href="#"><span class="edu-icon edu-user-rounded author-log-ic"></span>Meu Perfil</a>
-                                                        </li>
-                                                        <li><a href="#"><span class="edu-icon edu-settings author-log-ic"></span>Configurações</a>
-                                                        </li>
-                                                        <li><a href="login.html"><span class="edu-icon edu-locked author-log-ic"></span>Sair</a>                                                  
+                                                        <li><a href="login.html"><i class="fa fa-sign-out" aria-hidden="true"></i> Sair</a>   
                                                         </li>
                                                     </ul>
                                                 </li>
