--- a/ead/forum.html
+++ b/ead/forum.html
@@ -58,7 +58,7 @@
 
 <body>
 
-    <!-- Start Left menu area -->
+   <!-- Start Left menu area -->
     <div class="left-sidebar-pro">
         <nav id="sidebar" class="">
             <div class="sidebar-header">
@@ -76,41 +76,41 @@
                             </a>
                         </li>                        
                         <li>
-                            <a class="has-arrow" href="all-courses.html" aria-expanded="false">
+                            <a class="has-arrow" href="todos-cursos.html" aria-expanded="false">
                                 <i class="fa fa-folder-open" aria-hidden="true"></i>
                                 <span class="mini-click-non">Cursos</span>
                             </a>
                             <ul class="submenu-angle" aria-expanded="false">
                                 <li>
-                                    <a title="All Courses" href="all-courses.html">
+                                    <a title="Todos os Cursos" href="todos-cursos.html">
                                         <span class="mini-sub-pro">Todos Cursos</span>
                                     </a>
                                 </li>
                                 <li>
-                                    <a title="Courses Profile" href="course-info.html">
+                                    <a title="Courses Profile" href="curso.html">
                                     <span class="mini-sub-pro">Meus Cursos</span></a>
                                 </li>
                             </ul>
                         </li>                        
                         <li>
-                            <a title="Landing Page" href="events.html" aria-expanded="false">
+                            <a title="Landing Page" href="forum.html" aria-expanded="false">
                                 <i class="fa fa-comments-o" aria-hidden="true"></i>
                                 <span class="mini-click-non">Fórum</span>
                             </a>
                         </li>
                         <li>
-                            <a title="Landing Page" href="pages/livros.html" aria-expanded="false">
+                            <a title="Landing Page" href="livros.html" aria-expanded="false">
                                 <i class="fa fa-book" aria-hidden="true"></i>
                                 <span class="mini-click-non">Livros</span>
                             </a>
                         </li>
                         <li>
-                            <a class="has-arrow" href="all-students.html" aria-expanded="false">
+                            <a class="has-arrow" href="perfil.html" aria-expanded="false">
                                 <i class="fa fa-user-circle-o" aria-hidden="true"></i> 
                                 <span class="mini-click-non">Perfil</span>
                             </a>
                             <ul class="submenu-angle" aria-expanded="false">
-                                <li><a href="#"><span class="edu-icon edu-user-rounded author-log-ic"></span>Meu Perfil</a>
+                                <li><a href="perfil.html"><span class="edu-icon edu-user-rounded author-log-ic"></span>Meu Perfil</a>
                                 </li>
                                 <li><a href="login.html"><span class="edu-icon edu-locked author-log-ic"></span>Sair</a>
                                 </li>
@@ -142,7 +142,7 @@
         </div>
 
         <div class="header-advance-area">
-            <div class="header-top-area">
+             <div class="header-top-area">
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -151,8 +151,8 @@
                                     <div class="col-lg-1 col-md-0 col-sm-1 col-xs-12">
                                         <div class="menu-switcher-pro">
                                             <button type="button" id="sidebarCollapse" class="btn bar-button-pro header-drl-controller-btn btn-info navbar-btn">
-													<i class="educate-icon educate-nav"></i>
-												</button>
+                                                    <i class="educate-icon educate-nav"></i>
+                                                </button>
                                         </div>
                                     </div>
                                     <div class="col-lg-6 col-md-7 col-sm-6 col-xs-12">
@@ -288,7 +288,7 @@
                                                             <img src="assets/img/product/pro4.jpg" alt="" /> <span class="admin-name">Gabriela Gonçalves</span><i class="fa fa-angle-down edu-icon edu-down-arrow"></i>
                                                         </a>
                                                     <ul role="menu" class="dropdown-header-top author-log dropdown-menu animated zoomIn">
-                                                        <li><a href="#"><i class="fa fa-user-circle-o" aria-hidden="true"></i> Meu Perfil</a>
+                                                        <li><a href="perfil.html"><i class="fa fa-user-circle-o" aria-hidden="true"></i> Meu Perfil</a>
                                                         </li>
                                                         <li><a href="login.html"><i class="fa fa-sign-out" aria-hidden="true"></i> Sair</a>   
                                                         </li>
@@ -310,40 +310,39 @@
                         <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                             <div class="mobile-menu">
                                 <nav id="dropdown">
-                                                        <ul class="metismenu" id="menu1">
-                        <li class="active">
-                        <li>
-                            <a class="" href="index.html">
-                               <span class="educate-icon educate-home icon-wrap"></span>
-                               <span class="mini-click-non">Atividade</span>
-                            </a>
-                        </li>                        
-                        <li>
-                            <a class="has-arrow" href="all-courses.html" aria-expanded="false"><span class="educate-icon educate-course icon-wrap"></span> <span class="mini-click-non">Cursos</span></a>
-                            <ul class="submenu-angle" aria-expanded="false">
-                                <li><a title="All Courses" href="all-courses.html"><span class="mini-sub-pro">Todos Cursos</span></a></li>
-                                <li><a title="Courses Profile" href="course-info.html"><span class="mini-sub-pro">Meus Cursos</span></a></li>
-                            </ul>
-                        </li>                        
-                        <li>
-                            <a title="Landing Page" href="events.html" aria-expanded="false"><span class="educate-icon educate-event icon-wrap sub-icon-mg" aria-hidden="true"></span> <span class="mini-click-non">Fórum</span></a>
-                        </li>
-                        <li>
-                            <a title="Landing Page" href="events.html" aria-expanded="false"><span class="educate-icon educate-event icon-wrap sub-icon-mg" aria-hidden="true"></span> <span class="mini-click-non">Livros</span></a>
-                        </li>
-                        <li class="">
-                            <a class="has-arrow" href="all-students.html" aria-expanded="false"><span class="educate-icon educate-student icon-wrap"></span> <span class="mini-click-non">Perfil</span></a>
-                            <ul class="submenu-angle" aria-expanded="false">
-                                <li><a href="#"><span class="edu-icon edu-user-rounded author-log-ic"></span>Meu Perfil</a>
-                                </li>
-                                <li><a href="#"><span class="edu-icon edu-locked author-log-ic"></span>Sair</a>
-                                </li>
-                            </ul>
-                        </li>
-                        <li>
-                            <a title="Landing Page" href="../index.html" aria-expanded="false"><i class="fa fa-sign-out" aria-hidden="true"></i> <span class="mini-click-non">Crypto Money</span></a>
-                        </li>                        
-                    </ul>
+                                    <ul class="metismenu" id="menu1">
+                                        <li>
+                                            <a class="" href="index.html">
+                                               <span class="educate-icon educate-home icon-wrap"></span>
+                                               <span class="mini-click-non">Atividade</span>
+                                            </a>
+                                        </li>                        
+                                        <li>
+                                            <a class="has-arrow" href="todos-cursos.html" aria-expanded="false"><span class="educate-icon educate-course icon-wrap"></span> <span class="mini-click-non">Cursos</span></a>
+                                            <ul class="submenu-angle" aria-expanded="false">
+                                                <li><a title="Todos Os Cursos" href="todos-cursos.html"><span class="mini-sub-pro">Todos Cursos</span></a></li>
+                                                <li><a title="Meus Cursos" href="curso.html"><span class="mini-sub-pro">Meus Cursos</span></a></li>
+                                            </ul>
+                                        </li>                        
+                                        <li>
+                                            <a title="Landing Page" href="forum.html" aria-expanded="false"><span class="educate-icon educate-event icon-wrap sub-icon-mg" aria-hidden="true"></span> <span class="mini-click-non">Fórum</span></a>
+                                        </li>
+                                        <li>
+                                            <a title="Landing Page" href="livros.html" aria-expanded="false"><span class="educate-icon educate-event icon-wrap sub-icon-mg" aria-hidden="true"></span> <span class="mini-click-non">Livros</span></a>
+                                        </li>
+                                        <li class="">
+                                            <a class="has-arrow" href="perfil.html" aria-expanded="false"><span class="educate-icon educate-student icon-wrap"></span> <span class="mini-click-non">Perfil</span></a>
+                                            <ul class="submenu-angle" aria-expanded="false">
+                                                <li><a href="perfil.html"><span class="edu-icon edu-user-rounded author-log-ic"></span>Meu Perfil</a>
+                                                </li>
+                                                <li><a href="login.html"><span class="edu-icon edu-locked author-log-ic"></span>Sair</a>
+                                                </li>
+                                            </ul>
+                                        </li>
+                                        <li>
+                                            <a title="Landing Page" href="../index.html" aria-expanded="false"><i class="fa fa-sign-out" aria-hidden="true"></i> <span class="mini-click-non">Crypto Money</span></a>
+                                        </li>                        
+                                    </ul>
                                 </nav>
                             </div>
                         </div>
